src/objects/Volunteer_Training_Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Completed_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks if the volunteer attended and completed the training. If checked, the volunteer showed up and completed the training. If unchecked, the volunteer signed up but never completed the training.</description>
        <inlineHelpText>Did this volunteer attend and complete this training? If checked, the volunteer showed up and completed the training. If unchecked, the volunteer signed up but never completed the training.</inlineHelpText>
        <label>Completed Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Training__c</fullName>
        <label>Volunteer Training</label>
        <referenceTo>Volunteer_Training__c</referenceTo>
        <relationshipLabel>Volunteer Training Attendances</relationshipLabel>
        <relationshipName>Volunteer_Training_Attendances</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <label>Volunteer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteer Training Attendances</relationshipLabel>
        <relationshipName>Volunteer_Training_Attendances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Volunteer Training Attendance</label>
    <nameField>
        <displayFormat>VTA-{00000}</displayFormat>
        <label>Volunteer Training Attendance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Training Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>